# brutalist

./: .gitignore  Cargo.toml  README.md
fne/: COM008+1.p  CSR027+2.p  CSR031+3.p  CSR032+3.p  CSR034+2.p  CSR044+3.p  CSR052+3.p  CSR060+2.p  CSR060+3.p  CSR062+3.p  CSR063+2.p  CSR064+3.p  CSR067+3.p  CSR112+1.p  CSR113+14.p  CSR114+16.p  CSR114+4.p  CSR114+9.p  CSR115+37.p  CSR115+59.p  CSR115+74.p  CSR115+82.p  GEO167+1.p  GEO168+1.p  GEO254+1.p  KRS186+1.p  KRS203+1.p  KRS233+1.p  KRS234+1.p  KRS235+1.p  KRS251+1.p  KRS259+1.p  KRS260+1.p  KRS266+1.p  LCL650+1.010.p  LCL652+1.001.p  LCL652+1.010.p  LCL656+1.015.p  LCL658+1.020.p  LCL668+1.010.p  (+12 more)
src/: active_set.rs  cnf.rs  fol.rs  formula.rs  legend.rs  loader.rs  logic.rs  main.rs  passive_set.rs  problem_set.rs  prover.rs  sexp.rs  skolem.rs
tptp/Axioms/: CSR002+1.ax  CSR002+2.ax  CSR004+0.ax  GEO007+0.ax  GEO009+0.ax  KRS001+0.ax  KRS001+1.ax  MED001+0.ax  MED001+1.ax  NUM009+0.ax  SWB002+0.ax  SWB003+0.ax  SYN002+0.ax
tptp/FEQ/: AGT012+2.p  AGT013+2.p  AGT026+1.p  AGT026+2.p  ALG057+1.p  ALG106+1.p  ALG128+1.p  ALG176+1.p  ALG210+1.p  ALG210+2.p  ALG224+2.p  BIO005+1.p  BIO006+1.p  COM007+2.p  COM008+2.p  COM123+1.p  COM128+1.p  COM130+1.p  COM131+1.p  COM134+1.p  COM138+1.p  COM139+1.p  COM144+1.p  COM145+1.p  COM146+1.p  COM148+1.p  COM149+1.p  CSR007+1.p  CSR009+1.p  CSR015+1.p  CSR016+1.p  CSR017+1.p  CSR018+1.p  CSR019+1.p  CSR020+1.p  CSR023+1.p  CSR024+1.010.p  CSR026+5.p  CSR034+4.p  CSR049+5.p  (+343 more)
tptp/FNE/: BOO109+1.p  CSR030+3.p  CSR036+2.p  CSR038+2.p  CSR040+2.p  CSR044+2.p  CSR049+2.p  CSR049+3.p  (+40 more)
(+232 files in other folders)
