[package]
name = "brutalist"
version = "0.1.0"
authors = ["Kevin Lacker <lacker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.4.0"
lazy_static = "1.4.0"
rand = "0.7.3"
regex = "1.4.2"

[profile.release]
debug = true
